# ImpedanceAnalyzer

./: .gitignore  .mxproject  BodePlotter2.ioc  CMakeLists.txt  Dockerfile  ImpedanceAnalyzer.ioc  ImpedanceAnalyzer.jdebug  Nucleo-G474-template.ioc  Nucleo-G474-template.jdebug  Nucleo.jdebug  README.md  firmware.code-workspace  nucle-g474-example.ioc  stm32g474retx_flash.ld
Core/Inc/: blinky.h  main.h  posted_signals.h  private_signal_ranges.h  pubsub_signals.h  stm32g4xx_it.h
Core/Services/: analyzer.c  analyzer.h
Core/Services/app_cli/: app_cli.c  app_cli.h  app_cli_commands.c  app_cli_commands.h  app_cli_manual_commands.c
Core/Services/pc_com/: pc_com.c  pc_com.h
Core/Src/: blinky.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Core/bsp/: bsp.c  bsp.h
Core/bsp/drivers/: bsp.c  uart.c  uart_mpu_specific.h
Core/services/: analyzer.c  analyzer.h
Core/services/cli/: cli_commands.c
Core/services/pc_com/: pc_com.c  pc_com.h
MXTmpFiles/: dma.tmp  gpio.tmp
cmake/stm32cubemx/: CMakeLists.txt
messages/src/: AddToPlot.options  AddToPlot.proto  CMakeLists.txt  DrawBodePlot.proto  DrawPlot.options  DrawPlot.proto  MessageType.proto
pc_com/: com_controller.py  com_controller_fake.py  packets.py  pc_com.py  plot_manager.py
pc_com/messages/: AddToPlot_pb2.py  DrawBodePlot_pb2.py  DrawPlot_pb2.py  MessageType_pb2.py
